# pymumble-typed

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py  update_protobuf.sh
protobuf/: Mumble.proto  MumbleUDP.proto
pymumble-typed/: callbacks.py  client.py  commands.py  message.py  soundqueue.py
pymumble_typed/: MumbleUDP_pb2.py  MumbleUDP_pb2.pyi  Mumble_pb2.pyi  __init__.py  acl.py  callbacks.py  channels.py  commands.py  constants.py  messages.py  mumble.py  soundqueue.py  tools.py  users.py
pymumble_typed/crypto/: ocb2.py
pymumble_typed/network/: __init__.py  control.py  ping.py  udp_data.py  voice.py
pymumble_typed/protobuf/: MumbleUDP_pb2.py  MumbleUDP_pb2.pyi  Mumble_pb2.py  Mumble_pb2.pyi
pymumble_typed/sound/: __init__.py  decoder.py  encoder.py  soundoutput.py  soundqueue.py  voice.py
pymumble_typed/utils/: timer.py
src/pymumble_typed/: __init__.py  acl.py  blobs.py  callbacks.py  channels.py  commands.py  constants.py  messages.py  mumble.py  tools.py  users.py
src/pymumble_typed/crypto/: ocb2.py
src/pymumble_typed/network/: __init__.py  control.py  ping.py  udp_data.py  voice.py
src/pymumble_typed/protobuf/: MumbleUDP_pb2.py  MumbleUDP_pb2.pyi  Mumble_pb2.py  Mumble_pb2.pyi
src/pymumble_typed/sound/: __init__.py  audio.py  decoder.py  encoder.py  soundqueue.py  voice.py
src/pymumble_typed/utils/: timer.py
