[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymumble-typed"
version = "4.1.13"
dependencies = [
    "pycryptodomex==3.23.0",
    "opuslib==3.0.1",
    "protobuf>=6.32.0,<7.0.0"
]
requires-python = ">= 3.11"
authors = [
    { name = "nico9889", email = "contact@nico9889.me" }
]
description = "A Python implementation of the Mumble protocol, useful to make bots or clients"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mumble"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/Mello-Bot/pymumble-typed"
Repository = "https://github.com/Mello-Bot/pymumble-typed.git"
Issues = "https://github.com/Mello-Bot/pymumble-typed/issues"

[project.optional-dependencies]
dev = [
    "grpcio-tools==1.75.0",
    "ruff==0.13.0"
]